--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run dev"
   },
   "dependencies": {
+    "@nuxt/ufo": "^0.5.4",
+    "axios": "^0.21.1",
     "core-js": "3.5.0",
     "nouislider": "14.1.0",
     "v-tooltip": "2.0.2",
@@ -20,7 +22,9 @@
     "vue-clickaway": "2.2.2",
     "vue-lazyload": "1.3.3",
     "vue-material": "1.0.0-beta-11",
-    "vue-router": "3.1.3"
+    "vue-router": "3.1.3",
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.1.1",
